ansible/guest/roles/admission-controller/files/manifests/webhook-vap.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: protect-vwcs
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["admissionregistration.k8s.io"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE", "DELETE"]
      resources: ["validatingwebhookconfigurations", "mutatingwebhookconfigurations"]
      scope: "Cluster"
  validations:
  - expression: |
      'system:masters' in request.userInfo.groups || 
      request.userInfo.username == 'system:k3s-supervisor' ||
      has(request.userInfo.username) && request.userInfo.username.startsWith('system:serviceaccount:kube-system:')
    message: "VWC actions are forbidden"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: protect-vwcs-binding
spec:
  policyName: protect-vwcs
  validationActions: [Deny]  # Enforce denial on failure
  matchResources: {}  # Empty matchResources applies to all namespaces/resources

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: protect-vaps
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["admissionregistration.k8s.io"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE", "DELETE"]
      resources: ["validatingadmissionpolicies", "validatingadmissionpolicybindings"]
      scope: "Cluster"
  validations:
  - expression: "'system:masters' in request.userInfo.groups"
    message: "Operation on ValidatingAdmissionPolicy or Binding forbidden: only cluster-admin (system:masters) users are allowed"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: protect-vaps-binding
spec:
  policyName: protect-vaps
  validationActions: [Deny]
  matchResources: {}  # Cluster-wide scope
